--- a/public/css/b_login/index.css
+++ b/public/css/b_login/index.css
@@ -424,7 +424,7 @@ input[type=number]::-webkit-outer-spin-button {
     margin-top: 40px;
     width: 200px;
 }
-#h{
+#send_code{
     width: 200px;
     line-height: 20px;
 }
