--- a/public/css/b_t/index.css
+++ b/public/css/b_t/index.css
@@ -475,3 +475,8 @@ a:hover{
     padding-left: 0;
     padding-right: 0;
 }
+@media (min-width: 920px){
+    .mains {
+        width:402px!important;
+    }
+}
